# hla

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: ci.yml
include/MIM/: EnumeratedDataTypes.h  HLAtoken.h
src/MIM/: HLAobjectRoot.h
src/RTI/: VariableLengthData.cpp
src/RTI/encoding/: BasicDataElements.cpp  BasicDataElements.tests.cpp  DataElement.cpp  HLAfixedArray.cpp
targets/: CMakeLists.txt
targets/math/: CMakeLists.txt
targets/math/include/TT/: math.h
targets/math/src/: matrix.cpp  vector.tests.cpp
targets/mim/: CMakeLists.txt
targets/rti/: CMakeLists.txt
targets/rti.tests/: CMakeLists.txt
targets/rti.tests/src/RTI/encoding/: BasicDataElements.tests.cpp
targets/rti/include/RTI/encoding/: DataElement.h
targets/rti/src/RTI/: Exception.cpp
targets/rti/src/RTI/encoding/: BasicDataElements.cpp  BasicDataElements.tests.cpp  EncodingExceptions.cpp  Endianness.h
targets/tests/: CMakeLists.txt
targets/tests/src/RTI/encoding/: BasicDataElements.tests.cpp
